@@ -9,7 +9,6 @@
     chown istat.istat /var/{cache,run}/istat
   
   * Write config validation code in conf.cpp - validate()
-  * Create a flag for clearing stored UUID sessions (--clear-uuid)
   * Clean up stdout messages and create a logger in style of:
   
     log.info() << "Log this: " << var;
