@@ -32,6 +32,7 @@
 #include <vector>
 #include <sstream>
 #include <errno.h>
+#include <fstream>
 #include <string.h>
 #include <sys/stat.h>
 #include <sys/wait.h>
@@ -195,4 +196,31 @@ vector<string> explode(string source, const string & delims)
     }
     
     return ret;
+}
+
+int create_file(const string & dir, const string & file)
+{
+    stringstream temp;
+    temp << dir << "/" << file;
+    
+    if (!check_dir_exist(dir))
+    {
+        if (mkdir(dir.c_str(), 0755) != 0)
+        {
+            cout << "Could not create directory '" << dir << "': " << strerror(errno) << endl;
+            return -1;
+        }
+    }
+
+    ofstream out(temp.str().c_str());
+
+    if (!out)
+    {
+        cout << "Could not create file '" << temp.str() << "': " << strerror(errno) << endl;
+        return -1;
+    }
+
+    out.close();
+    
+    return 0;
 }
