@@ -3,10 +3,13 @@
  -------------------------------------------------------------------------
   * Version: 0.5.2
   * New: Cache directory now configurable by cache_dir in config.
+  * New: Created basic man page documentation.
+  * New: Flag for clearing the cache. (--clear-sessions)
+  * Fix: Should be more quite on the stdout now.
  -------------------------------------------------------------------------
   * Version: 0.5.1
   * Fix: Display help and version without read permission to config.
-  * Fix: Forgot to rename propertys for network and port that was changed.
+  * Fix: Forgot to rename properties for network and port that was changed.
  -------------------------------------------------------------------------
   * Version: 0.5.0
   * New: First release
